[workspace]
resolver = "3"
members = [
    "onepassword",
    "onepassword-async",
    "onepassword-shared",
    "onepassword-sys",
]

[workspace.dependencies]
onepassword-shared = { path = "./onepassword-shared" }
onepassword-sys = { path = "./onepassword-sys" }

byteorder = "1.5.0"
pollster = "0.4.0"
preinterpret = "0.2.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
