[workspace]
resolver = "3"
members = [
    "onepassword",
    "onepassword-async",
    "onepassword-shared",
    "onepassword-sys",
]

[workspace.package]
authors = ["anden3"]
description = "Rust bindings for 1Password SDK"
repository = "https://github.com/anden3/onepassword"
keywords = ["1password", "1pass", "password"]
edition = "2024"
license = "MIT"

[workspace.dependencies]
onepassword-shared = { version = "0.1.1", path = "./onepassword-shared" }
onepassword-sys = { version = "0.1.1", path = "./onepassword-sys" }

byteorder = "1.5.0"
pollster = "0.4.0"
preinterpret = "0.2.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
