[package]
name = "onepassword-async"
version = "0.1.0"
edition = "2024"

[dependencies]
onepassword-shared = { workspace = true }
onepassword-sys = { workspace = true, features = ["async"] }

secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1.49.0", default-features = false, features = [
    "rt",
    "macros",
] }
