[package]
name = "onepassword-async"
version = "0.1.1"
description = "Safe, natively async wrapper around `onepassword-sys`."
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
keywords = { workspace = true }

[dependencies]
onepassword-shared = { workspace = true }
onepassword-sys = { workspace = true, features = ["async"] }

secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1.49.0", default-features = false, features = [
    "rt",
    "macros",
] }
