[package]
name = "onepassword-shared"
version = "0.1.0"
description = "Types and maybe other things shared between `onepassword` and `onepassword-async`."
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
keywords = { workspace = true }

[dependencies]
serde = { workspace = true }
