[package]
name = "onepassword-sys"
version = "0.1.1"
description = "Mostly raw bindings to the 1Password SDK"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
keywords = { workspace = true }

[features]
default = ["std", "sync"]
sync = ["pollster"]
async = []
std = []

[dependencies]
byteorder = { workspace = true }
preinterpret = { workspace = true }

pollster = { workspace = true, optional = true }
