[package]
name = "onepassword"
version = "0.1.0"
edition = "2024"

[dependencies]
onepassword-shared = { workspace = true }
onepassword-sys = { workspace = true, features = ["sync"] }

pollster = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
