[package]
name = "onepassword"
version = "0.1.0"
description = "Safe, (almost entirely) natively sync wrapper around `onepassword-sys`."
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
keywords = { workspace = true }

[dependencies]
onepassword-shared = { workspace = true }
onepassword-sys = { workspace = true, features = ["sync"] }

pollster = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
